Corrigiendo disposición de layouts valores en los resources(SW)xxxdp

--- a/app/src/main/res/values-sw720dp/strings.xml
+++ b/app/src/main/res/values-sw720dp/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="all_aplication">All Applications</string>
     <string name="your_action_event">Aquí se puede agregar alguna acción o evento</string>
-    <string name="screen_type">phone</string>
+    <string name="screen_type">10-inch-tablet</string>
 
 
     <!--String-->
